src/objects/Dev_Tool_Config__c.object
<CustomObject>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>img_url__c</fullName>
        <label>img url</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Dev Tool Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tool name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Tool Configs</pluralLabel>
    <recordTypes>
        <fullName>Dev_Tool</fullName>
        <active>true</active>
        <label>Dev Tool</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tab</fullName>
        <active>true</active>
        <label>Tab</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>